# ShowsDb

./: .gitignore  README.markdown  SeriesDb.cabal  ShowsDb.cabal
src/: Main.hs  database.db
src/App/: Migrations.hs
src/App/Controllers/: Shows.hs
src/App/Models/: TVShow.hs
src/Framework/: AppState.hs  Database.hs
src/Framework/AppState/: Database.hs  Templates.hs  Types.hs
src/Framework/Database/: AppDatabase.hs  Database.hs  Model.hs  Specification.hs  Sql.hs
src/Framework/Database/Sql/: Convertible.hs  Generation.hs  Operations.hs  Types.hs
src/Scraper/: TVCom.hs
src/public/stylesheets/: main.css
src/templates/: footer.st  header.st  shows_index.st  shows_new.st  welcome_index.st
