name: SeriesDb
version: 0.1
cabal-version: -any
build-type: Simple
license: GPL
license-file: ""
copyright:
maintainer:
build-depends: HDBC, HDBC-sqlite3, base >= 4, filepath, happstack-server, mtl, convertible, HStringTemplate
stability:
homepage:
package-url:
bug-reports:
synopsis: SeriesDb
description: Series management server
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: SeriesDb
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options: -Wall -threaded
hugs-options:
nhc98-options:
jhc-options:
